user can only delete his comment and delete commentLikesRaw before delete the comment